Upgrade to Java 21 and Kotlin 1.9.20